<resources>
    <string name="app_name">대동고등학교 알리미</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //String names for activity_register.xml
    <string name="textView1">회원정보 입력</string>
    <string name="idText">아이디(이메일)</string>
    <string name="passwordText">비밀번호</string>
    <string name="passwordConfirm">비밀번호 확인</string>
    <string name="textView2">개인정보 입력</string>
    <string name="nameText">이름</string>
    <string name="studentCheck">학생</string>
    <string name="parentCheck">학부모</string>
    <string name="teacherCheck">교직원</string>
    <string name="RegisterButton">회원가입</string>
    <string name="Login">로그인</string>
    <string name="NotRegistered">아직 회원이 아니십니까?</string>

</resources>
